# tot

./: .gitignore  README.md  document-manager.py  document_manager.py  g_links.py  g_tags.py  main.py  net.html.py  nethtml.py  pyproject.toml  tot.spec
template/: net.html
