[project]
name = "tot"
version = "0.1.0"
description = "tot - Grafo de conhecimento local que conecta anotações por links e tags com visualização interativa"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.10.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
